<resources>
    <string name="app_name">Child Pickup App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_message">Create Message</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="parent_name">Parent Name</string>
    <string name="parent_email">Parent Email</string>
    <string name="parent_phone_number">Parent Phone Number</string>

    <string name="child_name">Child Name</string>
    <string name="child_age">Child Age</string>
    <string name="child_grade">Child Grade</string>

    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_color">Vehicle Color</string>

    <string name="back_button">Back</string>

    <string name="parent_profile_title"><b>Parent Profile</b></string>
    <string name="child_profile_title"><b>Child Profile</b></string>
    <string name="vehicle_profile_title"><b>Vehicle Profile</b></string>
    <string name="schedule_pickup_title"><b>Schedule Child Pickup</b></string>
    <string name="review_pickups_title"><b>Review Pickups</b></string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="parent_name_tv_text">John Smith</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="age">Age:</string>
    <string name="grade">Grade:</string>

    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="color">Color:</string>

    <string name="add_parent">Add Parent</string>
    <string name="add_child">Add Child</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="parent_queue_title">Parent Queue</string>

</resources>